Fixed the issue of overlaping text (actual)

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,3 @@ p, a {
     background-color: powderblue;
   }
 
-header {
-    display: inline-block;
-}
